--- a/prepos/pug/components/_faq.pug
+++ b/prepos/pug/components/_faq.pug
@@ -3,7 +3,7 @@ section.faq-index
  .container
   .faq-index__title
    .faq-index__title--text
-    h1 Lorem ipsum sarel
+    h1 Como operamos en Monlogo
     .line__vertical-03
   div(class="tab-pane fade show active", id="pills-home", role="tabpanel", aria-labelledby="pills-home-tab")
    section.faq
@@ -11,11 +11,11 @@ section.faq-index
      .row
       .col-md-7.col-10.offset-1.offset-md-0.pb-3
        h6.text-sm-left.text-center
-        | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique quod placeat atque eveniet esse. Mollitia dolorum possimus eveniet.
+        | Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respectivas respuestas.
        ul(id="faq-list", class="wow faq-list fadeInUp", style="visibility: visible; animation-name: fadeInUp;")
         li
          a(data-toggle="collapse", class="collapsed aqui", href="#faq1")
-          | ¿Qué es una marca comercial?
+          | ¿Porque elegir a monlogo?
          .collapse#faq1
           p
            |La marca comercial es el signo con que 
@@ -23,7 +23,7 @@ section.faq-index
            |en el mercado.
         li
          a(data-toggle="collapse", class="collapsed aqui", href="#faq2")
-          | ¿Qué es el registro de marca?
+          | ¿Cómo trabajamos?
          .collapse#faq2
           p
            |La marca comercial es el signo con que 
@@ -31,7 +31,7 @@ section.faq-index
            |en el mercado.
         li
          a(data-toggle="collapse", class="collapsed aqui", href="#faq3")
-          | ¿Qué se puede registrar como Marca?
+          | ¿Por donde los contacto?
          .collapse#faq3
           p
            |La marca comercial es el signo con que 
@@ -39,7 +39,7 @@ section.faq-index
            |en el mercado.
         li
          a(data-toggle="collapse", class="collapsed aqui", href="#faq4")
-          | ¿Qué son las clases de productos y servicios?
+          | ¿Cuál es la metodología de pago? ¿Comó pago?
          .collapse#faq4
           p
            |La marca comercial es el signo con que 
