--- a/prepos/pug/components/contact_2.pug
+++ b/prepos/pug/components/contact_2.pug
@@ -3,9 +3,9 @@
   .col-md-8
    .contact-1__title
     .contact-1--text
-     h4.text-left Lorem ipsum dolor ipsum dolor
+     h4.text-left Ya te mostramos nuestras soluciones, ¿y ahora que?
      .line__vertical-06
-     h6.text-left Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo. ornare varius diam eget, commodo.
+     h6.text-left Si te ha interesado nuestros servicios o tienes alguna duda, sin ningun compromiso te invitamos a contactarnos
   .col-md-3.offset-md-1.contact__btn
    a(href="#")
-    button(type="button", class="btn btn-lighting") Contactenos
+    button(type="button", class="btn btn-lighting") Contactar
