--- a/prepos/pug/index.pug
+++ b/prepos/pug/index.pug
@@ -15,10 +15,10 @@ html(lang="en")
      .hero__title
       .hero__title--text
        h1.text-left
-        | Lorem ipsum dolor
+        | Lleva tu marca al
         br
-        | sit amet consectetur adipi
-       h6 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias porro suscipit explicabo sapiente perspiciatis quae voluptatibus sequi facilis optio beatae debitis fuga omnis consectetur harum aliquid maxime, dolorem veritatis iure.
+        | siguiente nivel
+       h6 Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y u punto de referencia para tu industria.
        a(href="#")
         button(type="button", class="btn btn-primary") contáctenos
 
@@ -28,11 +28,11 @@ html(lang="en")
     .row.categories__title
      .col-sm-9.col-12.categories__title--text
       h1.text--left
-       | Categorías: Diseño, pagina web, y más!
+       | Diseñamos identidad corporativa, paginás web, y más!
       .line__vertical-01
-      h6 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias porro suscipit explicabo sapiente perspiciatis quae voluptatibus sequi facilis optio beatae debitis fuga omnis consectetur harum aliquid maxime
+      h6 Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría
      .col-sm-2.col-12.d-flex.align-items-end.justify-content-center
-      a(href="#") ver más >
+      a(href="servicios.html") ver más >
     include components/carousel.pug
 
   // Us
@@ -46,10 +46,10 @@ html(lang="en")
        .us__title
         .us__title--text
          h1.text--left
-          | Lorem ipsum dolor
+          | Nos gusta crear
          .line__vertical-02
-         h6 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus molestias officiis maxime quas pariatur, distinctio commodi et corrupti quibusdam, fuga ratione illo in nesciunt, architecto dolorem quis assumenda earum explicabo.fuga ratione illo in nesciunt, architecto dolorem quis assumenda earum explicabo.
-         h6 Lorem ipsum dolor sit amet consectetur adipisicing elit quasi. Architecto aspernatur, ab qui officiis placeat porro enim ipsam iste numquam, eaque illo!
+         h6 Hey! Somos el equipo de monlogo, nos dedidacamos a crear la imagen de una marca, tanto en la web como de forma fisica, tenemos la misión de hacer que tu marca logre llegar a muchas más personas y sea más acecible.
+         h6 Nuestra filosofia de trabajo es que crear junto al cliente un producto satisfactorio.
          a(href="#")
           button(type="button", class="btn btn-secondary") ver más
 
@@ -61,26 +61,26 @@ html(lang="en")
    .container
     .modus__title
      .modus__title--text
-      h1.text-center lorem ipsum dolor
-      h5.text-center Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo.
+      h1.text-center Trabajamos de dos maneras distintas. Tú eliges
+      h5.text-center Nuestro método de trabajo se divide en dos formas de contantración, elige el que mejor se adecue a ti
     .modus__object
      .row
       .col-md-6.col-12.modus__box
        .modus--img: img(src="img/001_rev1.jpg", alt="")
-       h3 Lorem ipsum dolor
-       h6 lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam
+       h3 Proyecto por fases
+       h6 El servicio que contrates se dividirá por fases, y pagaras una suma pequeña cada vez que una fase se termine
       .line__horizontal-01
       .col-md-6.col-12.modus__box
        .modus--img: img(src="img/001_rev1.jpg", alt="")
-       h3 Lorem ipsum dolor
-       h6 lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam
+       h3 Unir packs de servicios
+       h6 Aquí uniremos varios packs que usted necesite, y pagará cada uno una vez que se comience el trabajo
   
   // contact 1
-  section.contact
+   section.contact
    include components/contact_1.pug
 
   // proyects
-  section.project
+   section.project
    .container
     .project__title
      .project__title--text
