--- a/prepos/sass/components/_carousel.scss
+++ b/prepos/sass/components/_carousel.scss
@@ -3,6 +3,9 @@
     position: relative;
     // text-align: center;
     display: block;
+    p {
+      color: $color-lighting;
+    }
 }
 .carousel__container {
     transition: 450ms -webkit-transform;
@@ -43,6 +46,7 @@
     margin-right: .8rem;
     margin-left: .8rem;
     font-size: 20px;
+    word-wrap: break-word;
     cursor: pointer;
     box-shadow: $shadow2;
     transition: 450ms all;
@@ -69,25 +73,62 @@
     -o-object-fit: cover;
        object-fit: cover;
   }
-  
+
   .carousel-item__details {
+    width: 400px;
     align-items: flex-start;
-    background: linear-gradient(to top, $color-primary 0%, rgba(0,0,0,0) 100%);
     bottom: 0;
     display: flex;
     font-size: 10px;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     left: 0;
     opacity: 1;
     transition: 450ms opacity;
-    padding: 10px;
+    padding: 20px;
     padding-right: 0;
     position: absolute;
     right: 0;
     top: 0;
+    h3 {
+      display: none;
+    }
+    p {
+      display: none;
+    }
+    &:hover {
+        background: darken($color-sec, $amount: 10%);
+        padding: 3rem;
+        padding-top: 5rem;
+        align-items: flex-start;
+        span {
+          display: none;
+        }
+        h3 {
+          color: $color-lighting;
+          display: block;
+          width: 200px;
+          padding-bottom: 20px;
+          position: relative;
+          top: -60px;
+        }
+        p {
+          display: flex;
+          flex-direction: column;
+          position: relative;
+        }
+    }
   }
-  
+  .badge-primary {
+    display: flex;
+    align-items: center;
+    background-color: darken($color-secondary, $amount: 10%);
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 20px;
+    position: relative;
+    bottom: -160px;
+  }
   .carousel-item__details--img {
     width: 24px;
     height: 24px;
@@ -100,11 +141,18 @@
   
   .carousel-item__details--title {
     color: $color-lighting;
-    margin: 5px 0px 0px 0px;
+    margin: 5px 5px 5px 10px;
   }
   
   .carousel-item__details--subtitle {
     color: $color-lighting;
-    font-size: $fontS1 - 5;
-    margin: 3px 0;
+    font-size: $fontS1;
+    position: relative;
+    top: -60px;
+  }
+  .carousel-item__details--button {
+    border-bottom: 1px solid $color-lighting;
+    position: relative;
+    top: -60px;
+    left: 160px;
   }
