--- a/prepos/sass/lib/_variables.scss
+++ b/prepos/sass/lib/_variables.scss
@@ -5,6 +5,7 @@ $color-variation: #26435e;
 $color-alert: #1a3046;
 $color-lighting: #ffffff;
 // 1 #00B53C 2 #029e35 variation
+$color-sec: #315172de;
 
 // colors grey
 $color-grey: #64707c;
