--- a/prepos/pug/components/carousel.pug
+++ b/prepos/pug/components/carousel.pug
@@ -1,5 +1,5 @@
 .carousel-mon(data-scrollable)
  div(class="carousel__container d-flex justify-content-md-center", data-scrollable-inner, style="margin-top: -10px; bottom: -57px;")
-  +projectBox("servicios.html","001_rev1.jpg","project 1","title","Duis mollis porttitor ligula.")
-  +projectBox("#","002_rev1.jpg","project 2","title","subtitle")
-  +projectBox("#","003_rev1.jpg","project 3","title","subtitle")
+  +projectBox("servicios.html","001_rev1.jpg","project 1","Identidad Corporativa","Crea con nosotros la imagen de tu marca")
+  +projectBox("#","002_rev1.jpg","project 2","Diseño user interface","Crearemos el diseño de tu proximo website")
+  +projectBox("#","003_rev1.jpg","project 3","Paginas web","Hagamos una pagina web increíble")
