--- a/prepos/sass/components/_categories.scss
+++ b/prepos/sass/components/_categories.scss
@@ -20,7 +20,8 @@
         padding-left: 75px;
         padding-bottom: 0;
         &--text h1 {
-            width: 48%;
+            width: 70%;
+            padding-bottom: 10px;
         }
         &--text h6 {
             width: 70%;
