Services responsive page

--- a/prepos/pug/components/_faq.pug
+++ b/prepos/pug/components/_faq.pug
@@ -11,11 +11,11 @@ section.faq-index
      .row
       .col-md-7.col-10.offset-1.offset-md-0.pb-3
        h6.text-sm-left.text-center
-        | Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respectivas respuestas.
+        | Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respuesta, si su pregunta no está en las que están abajo, le invitamos a contactarnos
        ul(id="faq-list", class="wow faq-list fadeInUp", style="visibility: visible; animation-name: fadeInUp;")
         li
          a(data-toggle="collapse", class="collapsed aqui", href="#faq1")
-          | ¿Porque elegir a monlogo?
+          | ¿Porqué elegir a monlogo?
          .collapse#faq1
           p
            |La marca comercial es el signo con que 
@@ -39,7 +39,7 @@ section.faq-index
            |en el mercado.
         li
          a(data-toggle="collapse", class="collapsed aqui", href="#faq4")
-          | ¿Cuál es la metodología de pago? ¿Comó pago?
+          | ¿Cuál es la metodología de pago? ¿Y comó pago?
          .collapse#faq4
           p
            |La marca comercial es el signo con que 
