--- a/prepos/pug/index.pug
+++ b/prepos/pug/index.pug
@@ -18,7 +18,7 @@ html(lang="en")
         | Lleva tu marca al
         br
         | siguiente nivel
-       h6 Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y u punto de referencia para tu industria.
+       h6 Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y un punto de referencia para tu industria.
        a(href="#")
         button(type="button", class="btn btn-primary") contáctenos
 
@@ -28,7 +28,7 @@ html(lang="en")
     .row.categories__title
      .col-sm-9.col-12.categories__title--text
       h1.text--left
-       | Diseñamos identidad corporativa, paginás web, y más!
+       | Diseñamos identidad corporativa, páginas web, y más!
       .line__vertical-01
       h6 Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría
      .col-sm-2.col-12.d-flex.align-items-end.justify-content-center
@@ -48,7 +48,7 @@ html(lang="en")
          h1.text--left
           | Nos gusta crear
          .line__vertical-02
-         h6 Hey! Somos el equipo de monlogo, nos dedidacamos a crear la imagen de una marca, tanto en la web como de forma fisica, tenemos la misión de hacer que tu marca logre llegar a muchas más personas y sea más acecible.
+         h6 Hey! Somos el equipo de monlogo, nos dedidacamos a crear la imagen de una marca, tanto en la web como de forma fisica, tenemos la misión de hacer que tu marca logre llegar a muchas más personas y sea más accesible.
          h6 Nuestra filosofia de trabajo es que crear junto al cliente un producto satisfactorio.
          a(href="#")
           button(type="button", class="btn btn-secondary") ver más
