--- a/prepos/sass/components/_categories.scss
+++ b/prepos/sass/components/_categories.scss
@@ -39,21 +39,31 @@
     overflow-y: hidden;
     position: relative;
 }
+
+.category-menu {
+    padding-bottom: 45px;
+}
 .categories-s {
-    height: 200px;
-    margin-top: 1.5rem;
+    height: 180px;
+    margin-top: 2rem;
     .container {
-        max-width: 1240px;
+        max-width: 86%;
+        padding: 0;
     }
     .categories__title {
+        padding-left: 0;
         &--text h1 {
             margin-top: 10px;
+            margin-bottom: 0;
+            padding: 0;
             font-weight: 600;
         }
     }
     .list-group {
         flex-direction: row;
         margin-top: 15px;
+        margin-left: 5px;
+        margin-bottom: 25px;
     }
     .list-group-item {
         border-radius: 5px;
@@ -79,7 +89,7 @@
         font-weight: 600;
     }
     .list-group-item-action:first-child {
-        margin-left: 45px;
+        margin-left: 20px;
     }
     .tab-content > .active {
         display: flex;
@@ -87,18 +97,19 @@
 }
 
 .categories__s {
-    height: 800px;
-    max-width: 90%;
+    height: 900px;
+    max-width: 85%;
     margin-left: auto;
     margin-right: auto;
    .categories__box {
         display: flex;
+        flex-direction: row;
         position: relative;
         padding-top: 1rem;
     }
     .categories__box-1 {
         width: 300px;
-        height: 560px;
+        height: 80%;
         background-color: $color-lighting;
         border-radius: 20px;
         box-shadow: $shadow3;
