--- a/prepos/sass/components/_media.scss
+++ b/prepos/sass/components/_media.scss
@@ -1,3 +1,19 @@
+@media screen and (min-width: $breakXl + 200px) {
+    // -*-*Services*-*-
+    // Boxes explanation
+    .box-explanation {
+        .boxes__img--fly-1, .boxes__text--fly-1 {
+            left: 12%;
+        }
+        .boxes__img--fly-2, .boxes__text--fly-2 {
+            left: 34%;
+        }
+        .boxes__text--fly-3 {
+            left: 15%;
+        }
+    }
+}
+
 @media screen and (max-width: $breakXl) {
     // -*-*Index*-*-
     // Categories
@@ -56,6 +72,52 @@
             h5 {
                 font-size: $fontS2 - 2;
             }
+        }
+    }
+    // -*-*Services*-*-
+    // Categories
+    .categories-s {
+        height: 200px;
+    }
+    .categories__s {
+        height: 750px;
+        p {
+            font-size: $fontS1;
+        }
+        .categories__box {
+            padding: 0;
+             p {
+                font-size: $fontS1 - 3;
+             }
+        }
+        .categories__box-1 {
+            height: 85%;
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 700px;
+        .container-fluid {
+            max-width: 83%;
+        }
+        .explanation-1 {
+            padding: 0;
+        }
+        p {
+            font-size: $fontS1;
+        }
+    }
+    // Boxes explanation
+    .box-explanation {
+        height: 800px;
+        .boxes__img--fly-1, .boxes__text--fly-1 {
+            left: 10%;
+        }
+        .boxes__img--fly-2, .boxes__text--fly-2 {
+            left: 25%;
+        }
+        .boxes__text--fly-3 {
+            left: 8%;
         }
     }
 }
@@ -163,6 +225,83 @@
             max-width: 800px;
         }
     }
+    // -*-*Services*-*-
+    // Categories
+    .categories-s {
+        height: 180px;
+        .categories__title {
+            &--text h1 {
+                font-size: $fontS3 - 6;
+            }
+        }
+        .list-group-item-action {
+            font-size: $fontS2 - 1;
+            font-weight: 500;
+        }
+    }
+    .categories__s {
+        height: 900px;
+        .categories__text {
+            max-width: 90%;
+            margin-left: 4%;
+            margin-right: auto;
+        }
+        .categories__box {
+            padding-top: 4rem;
+        }
+        .categories__box-1 {
+            width: 40vw;
+            height: 430px;
+        }
+        .categories__box-2 {
+            width: 45vw;
+        }
+        .categories__box {
+             p {
+                font-size: $fontS1 - 2;
+             }
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 900px;
+        .container-fluid {
+            max-width: 82%;
+        }
+        h2 {
+            font-size: $fontS2 + 5;
+        }
+        h5 {
+            font-size: $fontS2 - 2;
+        }
+        p {
+            font-size: $fontS1;
+        }
+    }
+    // Boxes explanation
+    .box-explanation {
+        height: 800px;
+        .boxes--fly {
+            max-width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h2 {
+            font-size: $fontS2 + 5;
+        }
+        p {
+            font-size: $fontS1 - 1;
+        }
+        .boxes__img--fly-1, .boxes__text--fly-1 {
+            left: 0%;
+        }
+        .boxes__img--fly-2, .boxes__text--fly-2 {
+            left: 13%;
+        }
+        .boxes__text--fly-3 {
+            left: 0%;
+        }
+    }
 }
 @media screen and (max-width: $breakMd) {
     // -*-*Index*-*-
@@ -253,6 +392,9 @@
             &--text {
                 width: 500px;
             }
+            h1 {
+                font-size: $fontS3 - 5;
+            }
             h5 {
                 font-size: $fontS2 - 5;
             }
@@ -336,6 +478,77 @@
             margin-bottom: 20px;
         }
     }
+
+    // -*-*Services*-*-
+    // Categories
+    .categories-s {
+        height: 160px;
+        .list-group-item-action {
+            font-size: $fontS2 - 2;
+            padding-right: 10px;
+            padding-left: 10px;
+        }
+    }
+    .categories__s {
+        height: 800px;
+        .categories__text {
+            max-width: 95%;
+            margin-right: 5px;
+        }
+        .categories__box {
+            padding-top: 2rem;
+        }
+        .categories__box-1 {
+            width: 40vw;
+            height: 450px;
+        }
+        .categories__box-2 {
+            width: 45vw;
+        }
+        p {
+            font-size: $fontS1 - 1;
+        }
+        .categories__box {
+             p {
+                font-size: $fontS1 - 3;
+             }
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 900px;
+        .container-fluid {
+            max-width: 78%;
+        }
+    }
+    // Boxes explanation
+    .box-explanation {
+        height: 800px;
+        .boxes--fly {
+            max-width: 95%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .boxes__img--fly-1, .boxes__text--fly-1 {
+            left: 6%;
+        }
+        .boxes__img--fly-2, .boxes__text--fly-2 {
+            left: 3.5%;
+        }
+        .boxes__text--fly-3 {
+            left: 2%;
+        }
+        .boxes__img--fly-2 {
+            margin-right: 50px;
+        }
+        .boxes__text--fly-3 {
+            margin-left: 13px;
+            margin-right: 40px;
+        }
+        p {
+            font-size: $fontS1 - 2;
+        }
+    }
 }
 @media screen and (max-width: $breakSm) {
     // -*-*Index*-*-
@@ -411,8 +624,12 @@
             &--text {
                 width: 500px;
             }
+            h1 {
+                font-size: $fontS3 - 8;
+                padding-bottom: 10px;
+            }
             h5 {
-                font-size: $fontS2 - 5;
+                font-size: $fontS2 - 4;
             }
         }
         .modus__box {
@@ -428,6 +645,7 @@
     }
     // contact
     .contact {
+        height: 250px;
         .container {
             max-width: 440px;
         }
@@ -479,6 +697,133 @@
         img {
             width: 200px;
             margin-bottom: 10px;
+        }
+    }
+
+    // -*-*Services*-*-
+    // Categories
+    .category-menu {
+        padding-left: 45px;
+        padding-right: 45px;
+        margin: auto;
+        width: 680px;
+        max-width: 800px;
+    }
+    .categories-s {
+        height: 165px;
+        .container {
+            max-width: 800px;
+            padding-right: 0;
+            padding-left: 0;
+        }
+        .categories__title {
+            padding-left: 6%;
+        }
+        .list-group-item-action:first-child {
+            margin-left: 0;
+        }
+    }
+    .categories__s {
+        height: 1400px;
+        .categories__text {
+            max-width: 95%;
+            margin-right: 5px;
+        }
+        .categories__box {
+            flex-direction: column;
+            padding-top: 2rem;
+            p {
+                font-size: $fontS1 - 1;
+            }
+        }
+        .categories__box-1 {
+            width: 80vw;
+            padding: 2.2rem;
+            margin-left: auto;
+            margin-right: auto;
+            height: 450px;
+        }
+        .categories__box-2 {
+            width: 80vw;
+            padding: 2.2rem;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 900px;
+        .container-fluid {
+            max-width: 73%;
+        }
+        p {
+            font-size: $fontS1 - 1;
+        }
+    }
+    // Boxes explanation
+    .box-explanation {
+        height: 1600px;
+        .boxes--fly {
+            max-width: 70%;
+        }
+        .boxes--fly-1 {
+            flex-direction: column;
+            position: static;
+        }
+        .boxes__img--fly-1 {
+            width: 100%;
+            margin: 0;
+            margin-bottom: 10px;
+            border-bottom-left-radius: 0;
+            border-top-right-radius: 10px;
+        }
+        .boxes__text--fly-1 {
+            width: auto;
+            height: 250px;
+            margin: 0;
+            margin-bottom: 35px;
+            border-top-right-radius: 0;
+            border-bottom-left-radius: 10px;
+        }
+        .boxes__img--fly-1, .boxes__text--fly-1 {
+            left: 0;
+        }
+        .boxes--fly-2 {
+            flex-direction: column;
+            position: static;
+        }
+        .boxes__img--fly-2 {
+            width: 100%;
+            margin: 0;
+            margin-bottom: 35px;
+            border-bottom-left-radius: 10px;
+            border-top-right-radius: 0;
+        }
+        .boxes__text--fly-2 {
+            width: auto;
+            height: 250px;
+            margin: 0;
+            margin-bottom: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 0;
+        }
+        .boxes__img--fly-2, .boxes__text--fly-2 {
+            left: 0;
+        }
+        .boxes--fly-3 {
+            flex-direction: column;
+            position: static;
+        }
+        .boxes__text--fly-3 {
+            width: 100%;
+            height: 350px;
+            left: 0;
+            margin: 0;
+            display: flex;
+            align-items: flex-end;
+            .boxes--text {
+                width: auto;
+            }
         }
     }
 }
@@ -640,6 +985,52 @@
             width: 180px;
         }
     }
+
+    // -*-*Services*-*-
+    // Categories
+    .category-menu {
+        padding-left: 50px;
+    }
+    .categories-s {
+        margin-top: 3rem;
+        .categories__title {
+            padding-left: 8%;
+        }
+    }
+    .categories__s {
+        height: 1700px;
+        .categories__text {
+            max-width: 90%;
+        }
+        .categories__box {
+            p {
+                font-size: $fontS1 - 2;
+            }
+        }
+        .categories__box-1 {
+            height: 500px;
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 900px;
+        .container-fluid {
+            max-width: 71%;
+        }
+    }
+    // Boxes explanation
+    .box-explanation {
+        height: 1600px;
+        .boxes--fly {
+            max-width: 75%;
+        }
+        .boxes__text--fly-1 {
+            height: 210px;
+        }
+        .boxes__text--fly-2 {
+            height: 280px;
+        }
+    }
 }
 @media screen and (max-width: $breakXxs) {
     // -*-*Index*-*-
@@ -789,6 +1180,42 @@
     .logo.logo--footer {
         img {
             width: 160px;
+        }
+    }
+
+    // -*-*Services*-*-
+    // Categories
+    .category-menu {
+        padding-left: 60px;
+    }
+    .categories-s {
+        .categories__title {
+            padding-left: 8%;
+            &--text h1 {
+                font-weight: 500;
+                font-size: $fontS3 - 8;
+            }
+        }
+    }
+    .categories__s {
+        height: 1800px;
+        .categories__box-1 {
+            height: 520px;
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 1000px;
+        .container-fluid {
+            max-width: 71%;
+        }
+        .explanation-1 {
+            h2, h5 {
+                text-align: center;
+            }
+            p {
+                padding-top: 10px;
+            }
         }
     }
 }
@@ -958,6 +1385,60 @@
         img {
             width: 140px;
             margin-bottom: 10px;
+        }
+    }
+
+    // -*-*Services*-*-
+    // Categories
+    .category-menu {
+        padding-left: 50px;
+    }
+    .categories__s {
+        height: 1900px;
+        max-width: 90%;
+        .categories__box {
+            p {
+                font-size: $fontS1 - 3;
+            }
+        }
+        .categories__box-1 {
+            height: 540px;
+        }
+        p {
+            font-size: $fontS1 - 2;
+        }
+    }
+    // Explanation
+    .explanation {
+        height: 1000px;
+        .container-fluid {
+            max-width: 71%;
+        }
+        .explanation-1 {
+            h2 {
+                text-align: center;
+            }
+            h5 {
+                font-size: $fontS2 - 4;
+                text-align: center;
+            }
+            p {
+                font-size: $fontS1 - 2;
+                padding-top: 15px;
+            }
+        }
+    }
+    // Boxes explanation
+    .box-explanation {
+        height: 1600px;
+        .boxes--fly {
+            max-width: 75%;
+        }
+        .boxes__text--fly-1 {
+            height: 230px;
+        }
+        .boxes__text--fly-2 {
+            height: 330px;
         }
     }
 }
