--- a/prepos/sass/components/_text.scss
+++ b/prepos/sass/components/_text.scss
@@ -1,21 +1,25 @@
 .explanation {
-    height: 700px;
+    height: 800px;
     background: linear-gradient(to top, $color-lightengrey 0%, $color-lighting 100%);
     display: flex;
     align-items: center;
     .container-fluid {
-        max-width: 1150px;
-    }
-    .explanation-1 {
-        padding-top: 1.5rem;
+        max-width: 85%;
     }
 }
 
 .box-explanation {
+    width: 100%;
     height: 830px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-image: linear-gradient(to top, $color-variation, $color-primary);
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    /* padding-top: 2rem;
+    padding-bottom: 2rem; */
+    .boxes--fly {
+        max-width: 90%;
+    }
     .boxes--fly-1 {
         display: flex;
         padding-top: 2rem;
@@ -39,7 +43,7 @@
     }
     .boxes__img--fly-1, .boxes__text--fly-1 {
         position: relative;
-        left: 80px;
+        left: 8%;
     }
     .boxes--fly-2 {
         display: flex;
@@ -61,7 +65,7 @@
     }
     .boxes__img--fly-2, .boxes__text--fly-2 {
         position: relative;
-        left: 160px;
+        left: 36%;
     }
     .boxes--fly-3 {
         display: flex;
@@ -73,24 +77,9 @@
         margin-left: 50px;
         margin-right: 80px;
         position: relative;
-        left: 80px;
+        left: 8%;
         .boxes--text {
             width: 65%;
         }
-    }
-    .boxes__text--fly-4 {
-        @include boxes--fly-3;
-        &.right {
-            border-bottom-left-radius: 10px;
-            border-top-left-radius: 10px;
-        }
-        &.left {
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
-        }
-    }
-    .blur {
-        filter: blur(.8px);
-        opacity: .8;
     }
 }
