--- a/prepos/pug/servicios.pug
+++ b/prepos/pug/servicios.pug
@@ -136,7 +136,7 @@ html(lang="en")
       div(class="tab-pane fade", id="list-0", role="tabpanel", aria-labelledby="list-0-list")
        .categories__s
         .row
-         .col-md-5
+         .col-lg-5.col-12.categories__text
           p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates iste laudantium corrupti recusandae excepturi. Mollitia assumenda, cumque, alias ut nihil deserunt ipsa molestiae placeat aliquam debitis repellat repudiandae error nesciunt?
           p
            span hola
@@ -146,7 +146,7 @@ html(lang="en")
            | Todo contacto y comunicación con el cliente será vía correo electrónico y por Whatsapp.
            br
            | * El precio del servicio de propuesta o revisión de diseño adicional es 20 $ USD
-         .categories__box.col-md-7
+         .categories__box.col-lg-7.col-12
           .categories__box-1
            span
            h2 Pack Basico
@@ -197,15 +197,15 @@ html(lang="en")
        .explanation
         .container-fluid
          .row
-          .explanation-1.col-md-6
+          .explanation-1.col-md-6.col-12
            h2 Lorem ipsum dolor?
            h5 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias porro suscipit explicabo sapiente perspiciatis
            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, harum facere neque vero eius deserunt magni, ad asperiores voluptatibus eligendi ratione? Porro hic delectus aspernatur ipsum adipisci. Minima, nostrum adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, beatae ex. Vero accusantium rerum harum veniam repellendus expedita laudantium culpa odit voluptate deleniti provident amet cupiditate optio quo, omnis cum?
-          .col-md-5
+          .col-md-5.col-12
            .imagen
-          .col-md-6
+          .col-md-6.col-12
            .imagen
-          .explanation-1.col-md-6
+          .explanation-1.col-md-6.col-12
            h2 Lorem ipsum dolor?
            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa eos ex cupiditate error non, et ducimus vitae rerum natus, repellat reiciendis, possimus architecto magnam delectus sint veniam! Nostrum, blanditiis delectus!
            span hola
@@ -215,38 +215,33 @@ html(lang="en")
             |* El precio del servicio de propuesta o revisión de diseño adicional es 20 $ USD
        // Boxes explanation
        section.box-explanation
-        .boxes--fly-1
-         .boxes__text--fly-4.blur.left(style="width: 100px; position: relative; right: 40px;")
-         .boxes__img--fly-1
-         .boxes__text--fly-1
-          .boxes--text
-           h2 Tener un logo
-           p Es el embajador, la primera cara que verán de la marca. Para tener un buen logo tinene que ser legible, distinguible y atemporal. Así la marca sera recordada por el público.
-         .boxes__text--fly-4.blur.right(style="width: 230px; position: relative; right: -189px;")
-        .boxes--fly-2
-         .boxes__text--fly-4.blur.left(style="width: 200px;")
-         .boxes__text--fly-2
-          .boxes--text
-           h2 El manual de ideantidad visual
-           p Es un documento que incluye los lineamiento gráficos, usos, aplicaciones y restricciones para la implementación de la marca.
-            br
-            |Esto le servirá a que si trabaja con otros diseñaores o programadores, puedan implementar correctamente la marca.
-         .boxes__img--fly-2
-         .boxes__text--fly-4.blur.right(style="width: 30px; position: relative; left: 219px; padding: 0;")
-        .boxes--fly-3
-         .boxes__text--fly-4.blur.left(style="width: 30px; position: relative; left: -9px;")
-         .boxes__text--fly-3
-          .boxes--text
-           h2 Formatos de entrega son
-           p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
-            br
-            |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
-         .boxes__text--fly-4.blur.right(style="position: relative; left: 151px;")
+        .boxes--fly
+         .boxes--fly-1
+          .boxes__img--fly-1
+          .boxes__text--fly-1
+           .boxes--text
+            h2 Tener un logo
+            p Es el embajador, la primera cara que verán de la marca. Para tener un buen logo tinene que ser legible, distinguible y atemporal. Así la marca sera recordada por el público.
+         .boxes--fly-2
+          .boxes__text--fly-2
+           .boxes--text
+            h2 El manual de ideantidad visual
+            p Es un documento que incluye los lineamiento gráficos, usos, aplicaciones y restricciones para la implementación de la marca.
+             br
+             |Esto le servirá a que si trabaja con otros diseñaores o programadores, puedan implementar correctamente la marca.
+          .boxes__img--fly-2
+         .boxes--fly-3
+          .boxes__text--fly-3
+           .boxes--text
+            h2 Formatos de entrega son
+            p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
+             br
+             |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
 
       div(class="tab-pane fade", id="list-1", role="tabpanel", aria-labelledby="list-1-list")
        .categories__s
         .row
-         .col-md-5
+         .col-lg-5.col-12.categories__text
           p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates iste laudantium corrupti recusandae excepturi. Mollitia assumenda, cumque, alias ut nihil deserunt ipsa molestiae placeat aliquam debitis repellat repudiandae error nesciunt?
           p
            span hola
@@ -256,7 +251,7 @@ html(lang="en")
            | Todo contacto y comunicación con el cliente será vía correo electrónico y por Whatsapp.
            br
            | * El precio del servicio de propuesta o revisión de diseño adicional es 20 $ USD
-         .categories__box.col-md-7
+         .categories__box.col-lg-7.col-12
           .categories__box-1
            span
            h2 Pack Basico
@@ -307,15 +302,15 @@ html(lang="en")
        .explanation
         .container-fluid
          .row
-          .explanation-1.col-md-6
+          .explanation-1.col-md-6.col-12
            h2 Lorem ipsum dolor?
            h5 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias porro suscipit explicabo sapiente perspiciatis
            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, harum facere neque vero eius deserunt magni, ad asperiores voluptatibus eligendi ratione? Porro hic delectus aspernatur ipsum adipisci. Minima, nostrum adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, beatae ex. Vero accusantium rerum harum veniam repellendus expedita laudantium culpa odit voluptate deleniti provident amet cupiditate optio quo, omnis cum?
-          .col-md-5
+          .col-md-5.col-12
            .imagen
-          .col-md-6
+          .col-md-6.col-12
            .imagen
-          .explanation-1.col-md-6
+          .explanation-1.col-md-6.col-12
            h2 Lorem ipsum dolor?
            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa eos ex cupiditate error non, et ducimus vitae rerum natus, repellat reiciendis, possimus architecto magnam delectus sint veniam! Nostrum, blanditiis delectus!
            span hola
@@ -325,33 +320,28 @@ html(lang="en")
             |* El precio del servicio de propuesta o revisión de diseño adicional es 20 $ USD
        // Boxes explanation
        section.box-explanation
-        .boxes--fly-1
-         .boxes__text--fly-4.blur.left(style="width: 100px; position: relative; right: 40px;")
-         .boxes__img--fly-1
-         .boxes__text--fly-1
-          .boxes--text
-           h2 Tener un logo
-           p Es el embajador, la primera cara que verán de la marca. Para tener un buen logo tinene que ser legible, distinguible y atemporal. Así la marca sera recordada por el público.
-         .boxes__text--fly-4.blur.right(style="width: 230px; position: relative; right: -189px;")
-        .boxes--fly-2
-         .boxes__text--fly-4.blur.left(style="width: 200px;")
-         .boxes__text--fly-2
-          .boxes--text
-           h2 El manual de ideantidad visual
-           p Es un documento que incluye los lineamiento gráficos, usos, aplicaciones y restricciones para la implementación de la marca.
-            br
-            |Esto le servirá a que si trabaja con otros diseñaores o programadores, puedan implementar correctamente la marca.
-         .boxes__img--fly-2
-         .boxes__text--fly-4.blur.right(style="width: 30px; position: relative; left: 219px; padding: 0;")
-        .boxes--fly-3
-         .boxes__text--fly-4.blur.left(style="width: 30px; position: relative; left: -9px;")
-         .boxes__text--fly-3
-          .boxes--text
-           h2 Formatos de entrega son
-           p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
-            br
-            |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
-         .boxes__text--fly-4.blur.right(style="position: relative; left: 151px;")
+        .boxes--fly
+         .boxes--fly-1
+          .boxes__img--fly-1
+          .boxes__text--fly-1
+           .boxes--text
+            h2 Tener un logo
+            p Es el embajador, la primera cara que verán de la marca. Para tener un buen logo tinene que ser legible, distinguible y atemporal. Así la marca sera recordada por el público.
+         .boxes--fly-2
+          .boxes__text--fly-2
+           .boxes--text
+            h2 El manual de ideantidad visual
+            p Es un documento que incluye los lineamiento gráficos, usos, aplicaciones y restricciones para la implementación de la marca.
+             br
+             |Esto le servirá a que si trabaja con otros diseñaores o programadores, puedan implementar correctamente la marca.
+          .boxes__img--fly-2
+         .boxes--fly-3
+          .boxes__text--fly-3
+           .boxes--text
+            h2 Formatos de entrega son
+            p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
+             br
+             |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
 
 
   // Contact 2
