--- a/prepos/pug/servicios.pug
+++ b/prepos/pug/servicios.pug
@@ -113,6 +113,7 @@ html(lang="en")
         .boxes--fly
          .boxes--fly-1
           .boxes__img--fly-1
+           img(src="img/001.png", alt="prueba")
           .boxes__text--fly-1
            .boxes--text
             h2 Tener un logo
@@ -125,13 +126,15 @@ html(lang="en")
              br
              |Esto le servirá a que si trabaja con otros diseñaores o programadores, puedan implementar correctamente la marca.
           .boxes__img--fly-2
+           img(src="img/002.png", alt="prueba")
          .boxes--fly-3
           .boxes__text--fly-3
-           .boxes--text
+           .boxes--text.order-2.order-sm-1
             h2 Formatos de entrega son
             p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
              br
              |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
+           img(class="order-1 order-sm-2",src="img/003.png", alt="prueba")
       
       div(class="tab-pane fade", id="list-0", role="tabpanel", aria-labelledby="list-0-list")
        .categories__s
@@ -232,11 +235,12 @@ html(lang="en")
           .boxes__img--fly-2
          .boxes--fly-3
           .boxes__text--fly-3
-           .boxes--text
+           .boxes--text.order-2.order-sm-1
             h2 Formatos de entrega son
             p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
              br
              |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
+           img(class="order-1 order-sm-2",src="img/003.png", alt="prueba")
 
       div(class="tab-pane fade", id="list-1", role="tabpanel", aria-labelledby="list-1-list")
        .categories__s
@@ -337,11 +341,12 @@ html(lang="en")
           .boxes__img--fly-2
          .boxes--fly-3
           .boxes__text--fly-3
-           .boxes--text
+           .boxes--text.order-2.order-sm-1
             h2 Formatos de entrega son
             p .psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf
              br
              |Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.
+           img(class="order-1 order-sm-2",src="img/003.png", alt="prueba")
 
 
   // Contact 2
