--- a/prepos/sass/components/_text.scss
+++ b/prepos/sass/components/_text.scss
@@ -34,6 +34,12 @@
         border-bottom-right-radius: 0;
         margin-right: 20px;
         margin-left: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            filter: grayscale(70%)  brightness(80%) contrast(300%);
+        }
     }
     .boxes__text--fly-1 {
         @include boxes--fly-1;
@@ -57,6 +63,13 @@
         border-top-left-radius: 0;
         margin-left: 20px;
         margin-right: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            width: 110%;
+            padding-top: 15%;
+        }
     }
     .boxes__text--fly-2 {
         @include boxes--fly-1;
@@ -76,10 +89,16 @@
         @include boxes--fly-2;
         margin-left: 50px;
         margin-right: 80px;
+        display: flex;
         position: relative;
         left: 8%;
         .boxes--text {
             width: 65%;
         }
+        img {
+            height: 180%;
+            margin-top: -100px;
+        }
     }
+
 }
